force-app/main/default/objects/Drive_Projection_Rounding_Config__mdt/Drive_Projection_Rounding_Config__mdt.object-meta.xml
<CustomObject>
    <label>Drive Projection Rounding Config</label>
    <pluralLabel>Drive Projection Rounding Configs</pluralLabel>
</CustomObject>