force-app/main/default/objects/Drive_Projection_Rounding_Config__mdt/fields/Drive_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date_Offset__c</fullName>
    <label>Drive Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>