force-app/main/default/objects/Drive_Projection_Rounding_Config__mdt/fields/Rounding_Mode__c.field-meta.xml
<CustomField>
    <fullName>Rounding_Mode__c</fullName>
    <label>Rounding Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HALF_UP</fullName>
                <default>true</default>
                <label>HALF_UP</label>
            </value>
            <value>
                <fullName>FLOOR</fullName>
            </value>
            <value>
                <fullName>CEILING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>