force-app/main/default/objects/Drive_Projection_Rounding_Config__mdt/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <label>Tolerance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>